@@ -1,0 +1,40 @@
+#!/usr/bin/env python
+import matplotlib
+matplotlib.use('TkAgg')
+
+from matplotlib.numerix import arange, sin, pi
+from matplotlib.axes import Subplot
+from matplotlib.backends.backend_tkagg import FigureCanvasTkAgg, NavigationToolbar2TkAgg
+from matplotlib.figure import Figure
+
+import Tkinter as Tk
+import sys
+
+def destroy(e): sys.exit()
+
+root = Tk.Tk()
+root.wm_title("Embedding in TK")
+#root.bind("<Destroy>", destroy)
+
+
+f = Figure(figsize=(5,4), dpi=100)
+a = f.add_subplot(111)
+t = arange(0.0,3.0,0.01)
+s = sin(2*pi*t)
+
+a.plot(t,s)
+
+
+# a tk.DrawingArea
+canvas = FigureCanvasTkAgg(f, master=root)
+canvas.show()
+canvas.get_tk_widget().pack(side=Tk.TOP, fill=Tk.BOTH, expand=1)
+
+toolbar = NavigationToolbar2TkAgg( canvas, root )
+toolbar.update()
+canvas._tkcanvas.pack(side=Tk.TOP, fill=Tk.BOTH, expand=1)
+
+#button = Tk.Button(master=root, text='Quit', command=sys.exit)
+#button.pack(side=Tk.BOTTOM)
+
+Tk.mainloop()
